--- a/css/style.css
+++ b/css/style.css
@@ -22,37 +22,6 @@ button, input[type=submit] {
   cursor: pointer;
 }
 
-.btn {
-  padding: 0.5em 1.5em;
-  border-radius: 5px;
-}
-
-.btn-blue {
-  border: 2px solid var(--primary);
-  background-color: #fff;
-  color: var(--primary);
-}
-
-.btn-blue:focus, .btn-blue:hover {
-  background-color: var(--primary);
-  color: #fff;
-}
-
-.btn-red {
-  border: 2px solid var(--secondary);
-  background-color: #fff;
-  color: var(--secondary);
-}
-
-.btn-red:focus, .btn-red:hover {
-  background-color: var(--secondary);
-  color: #fff;
-}
-
-.center {
-  text-align: center;
-}
-
 body {
   font-family: 'Roboto', sans-serif;
   color: var(--text-color);
@@ -125,10 +94,41 @@ input:focus {
   box-shadow: 0 0 0 0.2rem var(--border-grey-dark);
 }
 
+.btn {
+  padding: 0.5em 1.5em;
+  border-radius: 5px;
+}
+
+.btn-blue {
+  border: 2px solid var(--primary);
+  background-color: #fff;
+  color: var(--primary);
+}
+
+.btn-blue:focus, .btn-blue:hover {
+  background-color: var(--primary);
+  color: #fff;
+}
+
+.btn-red {
+  border: 2px solid var(--secondary);
+  background-color: #fff;
+  color: var(--secondary);
+}
+
+.btn-red:focus, .btn-red:hover {
+  background-color: var(--secondary);
+  color: #fff;
+}
+
+.center {
+  text-align: center;
+}
+
 .container {
   max-width: 1000px;
   margin: 0 auto;
-  padding: 0 1em;
+  padding: 0 2rem;
 }
 
 .topnav {
@@ -136,13 +136,14 @@ input:focus {
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid var(--border-grey);
-  padding-bottom: 0.75em;
+  padding-bottom: 0.75rem;
+  margin-bottom: 3rem;
 }
 
 .topnav nav a {
   text-decoration: none;
   color: var(--text-color);
-  padding: 0.5em;
+  padding: 0.5rem;
 }
 
 .topnav nav a:hover {
@@ -158,8 +159,7 @@ input:focus {
 }
 
 .topnav ul {
-  margin-top: 1.5em;
-  padding-left: 0;
+  margin-top: 1.5rem;
 }
 
 .topnav ul, .topnav li {
@@ -167,12 +167,12 @@ input:focus {
 }
 
 .topnav .social li {
-  margin: 0 0.2em;
+  margin: 0 0.2rem;
 }
 
 .topnav .social {
   margin-left: auto;
-  margin-right: 1em;
+  margin-right: 1rem;
 }
 
 .topnav svg {
@@ -191,7 +191,6 @@ input:focus {
 .hero {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  align-items: center;
 }
 
 .hero img {
@@ -204,29 +203,28 @@ input:focus {
   flex-wrap: wrap;
   align-items: center;
   background-color: var(--text-color);
-  margin: 3em 0 4em 0;
+  margin: 4rem 0;
 }
 
 .sponsors img {
   display: inline-block;
   max-width: 100px;
-  padding: 1em;
+  padding: 1rem;
 }
 
-.newsletter {
+.content-odd {
   background-color: var(--light-blue);
-  padding: 4em;
+  margin-top: 2rem;
+}
+
+.content-centered {
+  padding: 4rem;
   text-align: center;
 }
 
 .content {
   max-width: 600px;
   margin: 0 auto;
-}
-
-.testimonials {
-  padding: 4em;
-  text-align: center;
 }
 
 .cards > ul {
@@ -245,8 +243,16 @@ input:focus {
   padding: 2rem 1.3rem;
 }
 
+.card2 {
+  max-width: 12rem;
+  margin: 1rem;
+  padding: 2rem 1.3rem;
+  text-align: center;
+}
+
 .card:hover {
   background-color: var(--light-blue);
+  box-shadow: 2px 2px 10px 0px var(--border-grey-dark);
 }
 
 .card .img {
@@ -256,23 +262,47 @@ input:focus {
   padding-right: 1rem;
 }
 
-.card .img img {
+.card2 .img {
+  height: 10rem;
+  width: 10rem;
+  margin: 0 auto;
+}
+
+.card .img img, .card2 .img img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.card .img img {
   filter: grayscale(100%);
+}
+
+.card:hover .img img {
+  filter: none;
+}
+
+.card2 .img img {
+  clip-path: circle(50% at 50% 50%);
 }
 
 .card .text {
   padding-top: 1.2rem;
 }
 
-.card p {
-  clear: both;
+.card p, .card2 p {
   font-size: 1em;
-  padding-top: 1rem;
   margin-bottom: 0;
   line-height: 1.5em;
+}
+
+.card p {
+  clear: both;
+  padding-top: 1rem;
+}
+
+.card2 small {
+  font-size: 90%;
 }
 
 .card h3 {
@@ -281,10 +311,10 @@ input:focus {
   padding: 0;
 }
 
-@media only screen and (max-width: 900px) {
-  h2 {
-    margin-top: 1em;
-  }
+.card2 h3 {
+  font-size: 1.3em;
+  margin: 1em 0 0.25em 0;
+  padding: 0;
 }
 
 @media only screen and (max-width: 768px) {
@@ -342,9 +372,5 @@ input:focus {
   }
   .topnav .social {
     margin: 0;
-  }
-
-  .hero {
-    align-items: flex-start;
   }
 }
