--- a/css/style.css
+++ b/css/style.css
@@ -32,24 +32,34 @@ h1 {
   margin-right: 2em;
 }
 
+h2, h3, h4, h5 {
+  margin-bottom: 0.5em;
+}
+
 h2 {
   text-transform: uppercase;
   font-size: 2.7em;
   line-height: 1.2em;
-  margin-bottom: 0.5em;
   margin-top: 0;
   letter-spacing: 0.05em;
 }
 
 h3, .h3 {
   font-size: 2em;
-  margin-bottom: 0.5em;
 }
 
 .h3 {
   text-transform: none;
   line-height: 1em;
   letter-spacing: unset;
+}
+
+h4, .h4 {
+  font-size: 1.5em;
+}
+
+h5, .h5 {
+  font-size: 1.2em;
 }
 
 a {
@@ -80,14 +90,14 @@ label {
   padding-right: 0.25em;
 }
 
-input {
+input, textarea {
   padding: 0.5em 0.75em;
   border: 1px solid var(--border-grey-dark);
   border-radius: 3px;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-input:focus {
+input:focus, textarea:focus {
   background-color: #fff;
   border-color: var(--primary);
   outline: 0;
@@ -227,11 +237,40 @@ input:focus {
   margin: 0 auto;
 }
 
-.cards > ul {
-  list-style: none;
+.row {
   display: flex;
   flex-wrap: wrap;
+}
+
+.jcc {
   justify-content: center;
+}
+
+.jcsb {
+  justify-content: space-between;
+}
+
+.jcsa {
+  justify-content: space-around;
+}
+
+.column {
+  width: 40%;
+  min-width: 22rem;
+  text-align: left;
+}
+
+.columnform input:not([type=submit]), .columnform textarea, .columnform label {
+  width: 90%;
+  display: block;
+}
+
+.columnform input, .columnform textarea {
+  margin: 0.3em 0 1.2em 0;
+}
+
+.cards > ul {
+  list-style: none;
   text-align: left;
 }
 
@@ -317,6 +356,17 @@ input:focus {
   padding: 0;
 }
 
+.details p {
+  font-size: 1em;
+  margin: 0 0 0.5em 0;
+}
+
+@media only screen and (max-width: 992px) {
+  .content-centered {
+    padding: 2rem;
+  }
+}
+
 @media only screen and (max-width: 768px) {
   h1 {
     align-self: flex-start;
@@ -373,8 +423,25 @@ input:focus {
   .topnav .social {
     margin: 0;
   }
-  .content-centered label, .content-centered input {
+  .content-centered {
+    padding: 2rem 1rem;
+  }
+  .onerow label, .onerow input {
     display: block;
     margin: 0.5rem auto;
+  }
+  .jccsmall {
+    justify-content: center;
+  }
+  .column {
+    text-align: center;
+    border-bottom: 1px solid var(--border-grey);
+    padding-bottom: 2rem;
+  }
+  .column label {
+    text-align: left;
+  }
+  .columnform input:not([type=submit]), .columnform textarea, .columnform label {
+    width: 100%;
   }
 }
