--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,24 @@ input:focus, textarea:focus {
   padding: 0 2rem;
 }
 
+a.skip-link {
+  background-color: var(--primary);
+  color: #fff;
+  left: 0;
+  padding: 1em;
+  position: absolute;
+  transform: translateY(-100%);
+  transition: transform 0.3s;
+}
+
+a.skip-link:visited {
+  color: #fff;
+}
+
+.skip-link:focus {
+  transform: translateY(0%);
+}
+
 .topnav {
   display: flex;
   align-items: center;
@@ -503,6 +521,9 @@ svg.npl {
     align-self: flex-start;
     margin-top: 0.2em;
     margin-bottom: 0.2em;
+  }
+  a.skip-link {
+    left: 50%;
   }
   .content-centered {
     padding: 2rem;
